[tool.poetry]
name = "hf-shim"
version = "0.1.0"
description = ""
authors = ["Shreyas Krishnaswamy <shrekris@anyscale.com>"]
readme = "README.md"
packages = [{include = "hf_shim"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=5.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
